--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  -webkit-app-region: drag;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
   background-color: rgb(24, 24, 24);
@@ -22,4 +21,8 @@ body {
   padding: 10px;
   display: flex;
   gap: 15px;
+}
+
+img {
+  cursor: pointer;
 }
